--- a/perl6/doc/lib/Language/classtut.pod
+++ b/perl6/doc/lib/Language/classtut.pod
@@ -506,7 +506,7 @@ it is important to understand that there are more useful OOP concepts.  When
 reaching for multiple inheritance it is good practice to consider whether
 the design wouldn't be better realized by using roles, which are generally
 safer because they force the class author to explicitly resolve conflicting
-method names.  For more information on roles see A<sec:roles>.
+method names.  For more information on roles see L<Roles|/language/objects#Roles>.
 
 =head1 Introspection
 
