--- a/perl6/doc/lib/Language/io.pod
+++ b/perl6/doc/lib/Language/io.pod
@@ -33,6 +33,17 @@ refer to the string as the file object itself and thus slurp in its
 contents directly.  Note that the C<slurp> takes care of opening and closing
 the file for you.
 
+=head2 Line by line
+
+Of course, we also have the option to read a file line-by-line.
+
+	for 'huge-csv'.IO.lines -> $line {
+		# Do something with $line
+	}
+	# or if you'll be processing later
+	my @lines = 'huge-csv'.IO.lines;
+
+
 =head1 Writing to files
 
 To write data to a file, again we have the choice of the traditional method
