--- a/perl6/doc/lib/Language/nativecall.pod
+++ b/perl6/doc/lib/Language/nativecall.pod
@@ -167,6 +167,22 @@ use C<$> all the way when using NativeCall. :-)
 
 Getting return values for arrays works out just the same.
 
+Some library APIs may take an array as a buffer that will be populated by the
+C function and, for, instance, return the actual number of items populated:
+
+   sub get_n_ints(CArray[int], int) returns Int is native('libints');
+
+In these cases it is important that the CArray has at least the number of
+elements that are going to be populated before passing it to the native
+subroutine, otherwise the C function may stomp all over Perl's memory
+leading to possibly unpredictable behaviour:
+
+   my $ints = CArray[int].new;
+   my $number_of_ints = 10;
+   $ints[$number_of_ints - 1] = 0; # extend the array to 10 items
+
+   my $n = get_n_ints($ints, $number_of_int;
+
 The memory management of arrays is important to understand. When you create an
 array yourself, then you can add elements to it as you wish and it will be
 expanded for you as required. However, this may result in it being moved in
