--- a/perl6/doc/lib/Language/regexes.pod
+++ b/perl6/doc/lib/Language/regexes.pod
@@ -569,14 +569,14 @@ Captures can be nested, in which case they are numbered per level
 =head2 Named captures
 
 Instead of numbering captures, you can also give them names. The generic --
-and slightly verbose -- way of giving out names is like this:
+and slightly verbose -- way of naming captures is like this:
 
     if 'abc' ~~ / $<myname> = [ \w+ ] / {
         say ~$<myname>      # abc
     }
 
 The access to the named capture, C<< $<myname> >>, is a shorthand for indexing
-the match object as a hash, so C<$/{ 'myname' }> or C<< $/<myname> >>.
+the match object as a hash, in other words: C<$/{ 'myname' }> or C<< $/<myname> >>.
 
 Coercing the match object to a hash gives you easy programmatic access to
 all named captures:
