--- a/perl6/doc/lib/Language/testing.pod
+++ b/perl6/doc/lib/Language/testing.pod
@@ -127,8 +127,8 @@ die if run.
 
 =begin code
 if $*KERNEL ~~ 'linux' {
-    is(num_forward_slashes("/a/b"), 2);
-    is(num_forward_slashes(normalize("/a//b")), 2);
+    is(num-forward-slashes("/a/b"), 2);
+    is(num-forward-slashes(normalize("/a//b")), 2);
 }
 else {
     skip "Can't use forward slashes on Windows", 2;
@@ -210,17 +210,17 @@ strings, such as C<'=='> or C<'~~'>.
 
 =head2 Matching output with a regular expression
 
-=item like($obtained, $expected_regex, $description?)
+=item like($obtained, $expected-regex, $description?)
 
 Marks a test as passed if the C<$obtained> C<Str> matches the
-C<$expected_regex>.  The function accepts an optional C<$description> of the
+C<$expected-regex>.  The function accepts an optional C<$description> of the
 test.  The regex to match can be either a pre-declared C<Regex> object or
 defined directly in the argument to C<like>.
 
-=item unlike($obtained, $expected_regex, $description?)
+=item unlike($obtained, $expected-regex, $description?)
 
 Marks a test as failed if the C<$obtained> C<Str> matches the
-C<$expected_regex>.  The function accepts an optional C<$description> of the
+C<$expected-regex>.  The function accepts an optional C<$description> of the
 test.  The regex to match can be either a pre-declared C<Regex> object or
 defined directly in the argument to C<unlike>.
 
@@ -262,8 +262,8 @@ Marks a test as passed if the C<$obtained> and C<$expected> numerical values
 are within C<1e-5> of each other.  The function accepts an optional
 C<$description> of the test.
 
-    my $eulers_constant_approx = 2.71828;
-    is-approx($eulers_constant_approx, e, "approximate Euler's constant");
+    my $eulers-constant-approx = 2.71828;
+    is-approx($eulers-constant-approx, e, "approximate Euler's constant");
 
 =head2 Class membership testing
 
@@ -359,12 +359,12 @@ exception.
 The function accepts an optional C<$description> of the test.
 
 =begin code
-eval-lives-ok q[my $daenerys_burns = False;
-                die "Oops, Khaleesi now ashes" if $daenerys_burns],
+eval-lives-ok q[my $daenerys-burns = False;
+                die "Oops, Khaleesi now ashes" if $daenerys-burns],
     "Dany is blood of the dragon";
 =end code
 
-=item throws-like($code, $ex_type, $description?)
+=item throws-like($code, $ex-type, $description?)
 
 The C<throws-like> function checks whether the given C<$code> (specified as
 either something C<Callable>, or as a something to be C<EVAL>led) throws a
