--- a/perl6/doc/lib/Type/BagHash.pod
+++ b/perl6/doc/lib/Type/BagHash.pod
@@ -87,8 +87,8 @@ say $a ⊖ $b;  # set(3)
 say $a ⊎ $b;  # bag(2(3), 4(2), 3(2))
 =end code
 
-See L<setbagmix#Set/Bag Operators> for a complete list of set and bag operators
-with detailed explanations.
+See L<Set/Bag Operators|setbagmix#Set/Bag Operators> for a complete list of
+set and bag operators with detailed explanations.
 
 =head1 See Also
 
