--- a/perl6/doc/lib/Type/Channel.pod
+++ b/perl6/doc/lib/Type/Channel.pod
@@ -37,7 +37,7 @@ Receives and removes an item from the channel. It blocks if no item is
 present, waiting for a C<send> from another thread.
 
 Throws an exception of
-type C<X::Channel::ReceiveOnClose> if the channel has been closed, and the
+type C<X::Channel::ReceiveOnClosed> if the channel has been closed, and the
 last item has been removed already.
 
 If the channel has been marked as erratic with method C<fail>, and the last
