--- a/perl6/doc/lib/Type/Metamodel/MethodContainer.pod
+++ b/perl6/doc/lib/Type/Metamodel/MethodContainer.pod
@@ -6,7 +6,7 @@
 
     class Metamodel::MethodContainer { ... }
 
-roles, classes, grammars ane enums can contain methods. This role implements
+roles, classes, grammars and enums can contain methods. This role implements
 the API around storing and introspecting them.
 
     say .name for Int.^methods(:all);
