--- a/perl6/doc/lib/Type/Metamodel/Primitives.pod
+++ b/perl6/doc/lib/Type/Metamodel/Primitives.pod
@@ -44,7 +44,7 @@ Sets the package associated with the type.
 
 Installs a method cache, that is, a mapping from method names to code objects.
 If C<:authoritative> is missing, or set to C<True>, then calls of methods that
-do not exist in the cache willl throw an exception of type
+do not exist in the cache will throw an exception of type
 L<X::Method::NotFound|/type/X::Method::NotFound>. If C<:authoritative> is set
 to C<False>, the usual fallback mechanism are tried.
 
