--- a/perl6/doc/lib/Type/Proc/Status.pod
+++ b/perl6/doc/lib/Type/Proc/Status.pod
@@ -10,14 +10,14 @@ L<run()|/type/IO#sub run> and L<shell()|/type/IO#sub shell> return a
 C<Proc::Status> object:
 
     my $status = run 'false';       # most UNIXes have a /bin/false
-    say $status.exit;               # 1
+    say $status.exitcode;           # 1
     say $status.signal;             # 0  (which means: not killed by a signal)
 
 =head1 Methods
 
-=head2 method exit
+=head2 method exitcode
 
-    method exit(Proc::Status:D:) returns Int:D
+    method exitcode(Proc::Status:D:) returns Int:D
 
 Returns the numeric exit code from the program.
 
