--- a/perl6/doc/lib/Type/SetHash.pod
+++ b/perl6/doc/lib/Type/SetHash.pod
@@ -74,8 +74,8 @@ say $a ⊖ $b;  # set(1, 3, 4)
 say $a ∪ $b;  # set(1, 2, 3, 4)
 =end code
 
-See L</language/setbagmix#Set/Bag Operators> for a complete list of set operators with
-detailed explanations.
+See L<Set/Bag Operators|/language/setbagmix#Set/Bag Operators> for a
+complete list of set operators with detailed explanations.
 
 =head1 See Also
 
