--- a/perl6/doc/lib/HomePage.pod
+++ b/perl6/doc/lib/HomePage.pod
@@ -44,6 +44,6 @@ You may also be interested in the Perl 6 <a href="http://design.perl6.org">desig
 which are in some places more complete than this documentation, but targeted
 toward compiler writers rather than users of the language.
 Documentation for the different but related <a href="http://perl.org/">Perl 5</a> language
-can be found <a href="http://perldoc.perl.org/">here</a>.
+can be found on the <a href="http://perldoc.perl.org/">Perl 5 documentation website</a>.
 </p>
 =end Html
