--- a/perl6/doc/lib/Language/objects.pod
+++ b/perl6/doc/lib/Language/objects.pod
@@ -513,7 +513,9 @@ order:
         }
     }
 
-=head1 X<Roles|declarator,role>
+=head1 Roles
+
+X<Roles|declarator,role>
 
 Roles are in some ways similar to classes, in that they are a collection of
 attributes and methods. They differ in that roles are also meant for
