--- a/perl6/doc/lib/Type/Hash.pod
+++ b/perl6/doc/lib/Type/Hash.pod
@@ -44,14 +44,63 @@ If an L<Enum> is encountered where a value is expected, it is used as a
 hash value:
 
     my %h = 'a', 'b' => 'c';
-    say %h<a>.WHAT;     # Pair();
-    say %h<a>.key;      # b
+    say %h<a>.WHAT;             # Pair();
+    say %h<a>.key;              # b
 
 If the same key appears more than once, the value associated with its last
 occurrence is stored in the hash:
 
     my %h = a => 1, a => 2;
-    say %h<a>;          # 2
+    say %h<a>;                  # 2
+
+=head1 Looping over hash keys and values
+
+A common idiom for processing the elements in a hash is to loop over the
+keys and values, for instance,
+
+    my %vowels = 'a' => 1, 'e' => 2, 'i' => 3, 'o' => 4, 'u' => 5;
+    for %vowels.kv -> $vowel, $index {
+	    "$vowel: $index".say;
+    }
+
+gives output similar to this:
+
+    a: 1
+    e: 2
+    o: 4
+    u: 5
+    i: 3
+
+where we have used the C<kv> method to extract the keys and their respective
+values from the hash, so that we can pass these values into the loop.
+
+Note that the order of the keys and values printed cannot be relied upon;
+the elements of a hash are not always stored the same way in memory for
+different runs of the same program.  Sometimes one wishes to process the
+elements sorted on, e.g. the keys of the hash.  If one wishes to print the
+list of vowels in alphabetical order then one would write
+
+    my %vowels = 'a' => 1, 'e' => 2, 'i' => 3, 'o' => 4, 'u' => 5;
+    for %vowels.sort(*.key)>>.kv -> ($vowel, $index) {
+	    "$vowel: $index".say;
+    }
+
+which prints
+
+    a: 1
+    e: 2
+    i: 3
+    o: 4
+    u: 5
+
+and is in alphabetical order as desired.  To achieve this result, we sorted
+the hash of vowels by key (C<%vowels.sort(*.key)>) which we then ask for its
+keys and values by applying the C<.kv> method to each element via the unary
+C< >> > hyperoperator.  The output of this operation is a C<Parcel>, the
+items of which need to be passed into the C<for> loop's block as arguments,
+hence the need to wrap the key/value pairs in parentheses.  Wrapping the
+C<for> loop's input in parentheses is not normally necessary when the input
+is a C<List>.
 
 =head1 Methods
 
@@ -62,13 +111,32 @@ occurrence is stored in the hash:
 Adds the C<@new> elements to the hash with the same semantics as hash
 assignment, but with three exceptions:
 
-=item the hash isn't emptied first, i.e. old pairs are not deleted.
+=item The hash isn't emptied first, i.e. old pairs are not deleted.
 
-=item if a key already exists in the hash, and the corresponding value is an
+=item If a key already exists in the hash, and the corresponding value is an
 L<Array>, the new value is pushed onto the array (instead of replacing it).
 
-=item if a key already exists in the hash, and the corresponding value is not
+=item If a key already exists in the hash, and the corresponding value is not
 an L<Array>, old and new value are both placed into an array in the place
 of the old value.
+
+Example:
+
+    my %h  = a => 1;
+    %h.push: a => 1;                    # a => [1,1]
+    %h.push: a => [ 1 xx 3 ];           # a => [1,1,1,1,1]
+    %h.push: b => 3;                    # a => [1,1,1,1,1], b => 3
+
+Also note that push can be used as a replacement for assignment during hash
+initialization very useful ways. Take for instance the case of an inverted
+index:
+
+    my %wc = 'hash' => 323, 'pair' => 322, 'pipe' => 323;
+    (my %inv).push: %wc.invert.unique;
+    say %inv;                           # 322 => 'pair', 323 => ['hash','pipe']
+
+Note that such a initialization could also be written as
+
+    my %inv .= push: %wc.invert.unique;
 
 =end pod
