--- a/perl6/doc/lib/Type/Str.pod
+++ b/perl6/doc/lib/Type/Str.pod
@@ -135,9 +135,9 @@ Returns the number of characters in the string in the current
 
 =head2 method encode
 
-    multi method encode(Str:D: $encoding = $?ENC, $nf = $?NF) returns Buf
+    multi method encode(Str:D: $encoding = $?ENC, $nf = $?NF) returns Blob
 
-Returns a L<Buf> which represents the original string in the given encoding
+Returns a L<Blob> which represents the original string in the given encoding
 and normal form. The actual return type is as specific as possible, so
 C<$str.encode('UTF-8')> returns a C<utf8> object,
 C<$str.encode('ISO-8859-1')> a C<buf8>.
@@ -440,10 +440,13 @@ object representing the successful match, or C<Any> otherwise.
 =head2 routine substr
 
     multi sub    substr(Str:D $s, Int:D $from, Int:D $chars = $s.chars - $from) returns Str:D
+    multi sub    substr(Str:D $s, Range $from-to) returns Str:D
     multi method substr(Str:D $s: Int:D $from, Int:D $chars = $s.chars - $from) returns Str:D
+    multi method substr(Str:D $s: Range $from-to) returns Str:D
 
 Returns a part of the string, starting from the character with index C<$from>
-(where the first character has index 0) and with length C<$chars>.
+(where the first character has index 0) and with length C<$chars>.  If a range is
+specified, its first and last indices are used to determine the size of the substring.
 
 Examples:
 
@@ -451,6 +454,91 @@ Examples:
     substr("Long string", 6);        # tring
     substr("Long string", 6, *-1);   # trin
     substr("Long string", *-3, *-1); # in
+
+=head2 method substr-eq
+
+    multi method substr-eq(Str:D:  Str(Cool) $test-string, Int(Cool) $from) returns Bool
+    multi method substr-eq(Cool:D: Str(Cool) $test-string, Int(Cool) $from) returns Bool
+
+Returns C<True> if the C<$test-string> exactly matches the C<String> object,
+starting from the given initial index C<$from>.  For example, beginning with
+the string C<"foobar">, the substring C<"bar"> will match from index 3:
+
+    my $string = "foobar";
+    say $string.substr-eq("bar", 3);  #-> True
+
+However, the substring C<"barz"> starting from index 3 won't match even
+though the first three letters of the substring do match:
+
+    my $string = "foobar";
+    say $string.substr-eq("barz", 3);  #-> False
+
+Naturally, to match the entire string, one merely matches from index 0:
+
+    my $string = "foobar";
+    say $string.substr-eq("foobar", 0);  #-> True
+
+Since this method is inherited from the C<Cool> type, it also works on
+integers.  Thus the integer C<42> will match the value C<342> starting from
+index 1:
+
+    my $integer = 342;
+    say $integer.substr-eq(42, 1);  #-> True
+
+As expected, one can match the entire value by starting at index 0:
+
+    my $integer = 342;
+    say $integer.substr-eq(342, 0);  #-> True
+
+Also using a different value or an incorrect starting index won't match:
+
+    my $integer = 342;
+    say $integer.substr-eq(42, 3);  #-> False
+    say $integer.substr-eq(7342, 0);  #-> False
+
+=head2 method substr-rw
+
+    method substr-rw($from, $length?)
+
+A version of C<substr> that returns a writable reference to a part of a
+string variable.  Its first argument, C<$from> specifies the index in the
+string from which a substitution should occur, and its last argument,
+C<$length> specifies how many characters are to be replaced.
+
+For example, in its method form, if one wants to take the string C<"abc">
+and replace the second character (at index 1) with the letter C<"z">, then
+one do this:
+
+    my $string = "abc";
+    $string.substr-rw(1, 1) = "z";
+    $string.say;                    #-> azc
+
+C<substr-rw> also has a function form, so the above example can also be
+written like so:
+
+    my $string = "abc";
+    substr-rw($string, 1, 1) = "z";
+    $string.say;                    #-> azc
+
+It is also possible to alias the writable reference returned by C<substr-rw>
+for repeated operations:
+
+    my $string = "A character in the 'Flintstones' is: barney";
+    $string ~~ /(barney)/;
+    my $ref := substr-rw($string, $0.from, $0.to);
+    $string.say;
+    #-> A character in the 'Flintstones' is: barney
+    $ref = "fred";
+    $string.say;
+    #-> A character in the 'Flintstones' is: fred
+    $ref = "wilma";
+    $string.say;
+    #-> A character in the 'Flintstones' is: wilma
+
+Notice that the start position and length of string to replace has been
+specified via the C<.from> and C<.to> methods on the C<Match> object, C<$0>.
+It is thus not necessary to count characters in order to replace a
+substring, hence making the code more flexible.
 
 =head2 method succ
 
