git subrepo clone --force git://github.com/p6-pdf/perl6-Font-AFM.git p6-pdf/perl6-Font-AFM
subrepo:
  subdir:   "p6-pdf/perl6-Font-AFM"
  merged:   "72124d9"
upstream:
  origin:   "git://github.com/p6-pdf/perl6-Font-AFM.git"
  branch:   "master"
  commit:   "72124d9"
git-subrepo:
  version:  "0.2.1"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "b136967"

--- a/p6-pdf/perl6-Font-AFM/Changes
+++ b/p6-pdf/perl6-Font-AFM/Changes
@@ -7,6 +7,14 @@
    - $afm.stringwidth("RVX", :kern) - computes stringwith after kerning
    - $afm.encode("RVX", :kern) - encode and kern characters.
 
+  Release 1.23
+   Making things less ISO-Latin1 centric
+  - inverted @ISOLatin1Encoding => %ISOLatin1Encoding
+  - removed method .wx-table('latin-1')
+  - renamed method .encode => .kern
+  - added :%chars option to .stringwidth, .kern
+  - compute metrics for Symbol, ZapfDingbats
+
 2015-04-30
 
    Release 1.21
