git subrepo clone --force git://github.com/Tux/CSV.git Tux/CSV
subrepo:
  subdir:   "Tux/CSV"
  merged:   "7765416"
upstream:
  origin:   "git://github.com/Tux/CSV.git"
  branch:   "master"
  commit:   "7765416"
git-subrepo:
  version:  "0.2.2"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "436d7b7"

--- a/Tux/CSV/Text-CSV.pod
+++ b/Tux/CSV/Text-CSV.pod
@@ -8,12 +8,17 @@ Text::CSV - comma-separated values manipulation routines
 
  use Text::CSV;
 
- # Read whole file in memory as array of arrays
- my @aoa = csv(in => "data.csv");
+ # Read whole file in memory
+ my @aoa = csv(in => "data.csv");  # as array of arrays
+ my @aoh = csv(in => "data.csv",
+               headers => "auto"); # as array of hashes
+
  # Write array of arrays as csv file
  csv(in => @aoa, out => "file.csv", sep => ";");
 
+
  my @rows;
+ # Read/parse CSV
  my $csv = Text::CSV.new;
  my $fh  = open "test.csv", :r, chomp => False;
  while (my @row = $csv.getline($fh)) {
@@ -22,9 +27,9 @@ Text::CSV - comma-separated values manipulation routines
      }
  $fh.close;
 
- $csv.eol("\r\n");
+ # and write as CSV
  $fh = open "new.csv", :w;
- $csv.print($fh, $_) for @rows;
+ $csv.say($fh, $_) for @rows;
  $fh.close;
 
 =head1 DESCRIPTION
